# mums2

./: .Rbuildignore  .gitignore  .lintr  12152023 Coculture with new JC1_complex.csv  12152023 Coculture with new JC1_simple.csv  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  annotations.csv  authors.html  authors.md  count_table.RDS  count_table_jc1.count  cran-comments.md  dist.out  dist2.out  distances.out  fragmentation_tree.out  full_mix_data_combined.csv  full_mix_no_filter  full_mix_no_filter_cutoff_0_5.csv  index.html  index.md  llms.txt  meta_jc1.csv  mums2_rarefy.out  peak_table.csv  pkgdown.yml  rarefaction_test.out  search.json  sitemap.xml  sparse_matrix.RDS  (+2 more)
src/: AlphaDiversity.cpp  AlphaDiversity.gcno  AnnotateMs2.cpp  Annotation.cpp  Annotation.gcno  AnnotationController.cpp  AnnotationController.gcno  BetaDiversity.cpp  BrayCurtisDissimilarity.cpp  CMakeLists.txt  CleanSpectrum.c  CommunityMatrix.cpp  DecomposeMass.cpp  DetectNeutralLoses.cpp  DirectedAcyclicGraph.cpp  Distance.cpp  Diversity.cpp  DiversityMetricFactory.cpp  EuclideanDistance.cpp  FragmentationTree.cpp  GNPSScoringDynamicPriorityQueue.cpp  GreedyHeuristic.cpp  HammingDistance.cpp  HumanMetabolomicsDB.cpp  JaccardDistance.cpp  Makevars  ModifiedCosineScore.cpp  MolecularFormula.cpp  MolecularMakeup.cpp  MorisitahornIndex.cpp  RandomizationMethods.cpp  Rarefaction.cpp  RcppExports.cpp  ReadSpectra.cpp  ScoringFactory.cpp  ShannonDiversityIndex.cpp  SimpsonsDiversityIndex.cpp  SorensonIndex.cpp  SpeciesRichnessDiversity.cpp  SpectralEntropy.c  (+39 more)
src/AnnotateMs2/: AnnotateMs2.h
src/AnnotationStructure/: AnnotatedNode.h  Annotation.cpp  Annotation.h  AnnotationController.cpp  AnnotationController.h  AnnotationNode.h  Feature.h
src/CustomProgressBar/: CliProgressBar.h  ETAProgressBar.h
src/DataStructures/: CommunityMatrix.cpp  CommunityMatrix.h  CppMatrix.h
src/Decomposition/: DecompResult.h  DecomposeMass.h  DecomposeMassInputData.h  DecompositionHolder.h
src/DirectedAcyclicGraph/: DirectedAcyclicGraph.h  FragmentationNode.h  Vertex.h
src/Distance/: Distance.h
src/DiversityMetrics/: Diversity.cpp  Diversity.h  DiversityCalculator.cpp  DiversityCalculator.h  DiversityMetricFactory.cpp  DiversityMetricFactory.h
src/FragmentationTree/: DetectNeutralLoses.h  FragmentationNode.h  FragmentationTree.h  GreedyHeuristic.h
src/HMDB/: HumanMetabolomicsDB.h  HumanMetabolomicsDBNode.h
src/Math/: ParallelRandomNumberSitmo.h  SpectraMath.h  VectorMath.h
src/NormalizeMs2/: ScaleNormalize.h  SquareRootNormalize.h
src/Rarefy/: AbundanceMap.h  (+2 more)
(+335 files in other folders)
