cmake_minimum_required(VERSION 3.28)
project(mums2)
set(CMAKE_CXX_STANDARD 11)
include_directories("/Library/Frameworks/R.framework/Versions/4.3-arm64/Resources/library/Rcpp/libs/")
include_directories("/Library/Frameworks/R.framework/Versions/4.3-arm64/Resources/library/Rcpp/include/")
include_directories("/Library/Frameworks/R.framework/Versions/4.3-arm64/Headers/")
add_executable(mums2 distMs2.cpp
        AnnotateMs2/DataStructures/Query.h
        AnnotateMs2/DataStructures/Reference.h
        AnnotateMs2/AnnotateMs2.h
        Distance/DataStructures/SparseValue.h
        Distance/DataStructures/Spectra.h
        Distance/Distance.h
        NormalizeMs2/ScaleNormalize.h
        NormalizeMs2/SquareRootNormalize.h
        Rarefy/AbundanceMap.h
        ScoringMethods/GNPS/GNPSScoringDynamicPriorityQueue.h
        ScoringMethods/SpectralEntropy/CleanSpectrum.h
        ScoringMethods/SpectralEntropy/entropy.h
        ScoringMethods/SpectralEntropy/Example.c
        ScoringMethods/SpectralEntropy/SpectralEntropy.h
        ScoringMethods/Score.h
        ScoringMethods/ScoreValues.h
        ScoringMethods/ScoringFactory.h
        Spectra/Spectra.h
        Utils/Utils.h
        AnnotateMs2.cpp
        annotateMs2Features.cpp
        CleanSpectrum.c
        Distance.cpp
        entropy.cpp
        GNPSScoringDynamicPriorityQueue.cpp
        normalizeMs2.cpp
        RcppExports.cpp
        scoreMs2.cpp
        ScoringFactory.cpp
        SpectralEntropy.c
        test-runner.cpp
        test-Utils.cpp
        SimpsonsDiversityIndex.cpp
        DiversityMetrics/AlphaDIversityCalculators/SimpsonsDiversityIndex.h
        DIversityMetrics/DiversityCalculator.cpp
        DIversityMetrics/DiversityCalculator.h
        ShannonDiversityIndex.cpp
        DiversityMetrics/AlphaDiversityCalculators/ShannonDiversityIndex.h
        BrayCurtisDissimilarity.cpp
        DiversityMetrics/BetaDiversityCalculators/BrayCurtisDissimilarity.h
        main.cpp
        DiversityMetricFactory.cpp
        DiversityMetrics/DiversityMetricFactory.h
        RandomizationMethods.cpp
        Random/RandomizationMethods.h
        Rarefaction.cpp
        Rarefy/Rarefaction.h
        DiversityMetrics/AlphaDiversityCalculators/AlphaDiversity.h
        DiversityMetrics/BetaDiversityCalculators/BetaDiversity.h
        DiversityMetrics/Diversity.h
        AlphaDiversity.cpp
        BetaDiversity.cpp
        Diversity.cpp
        DiversityMetrics/AlphaDiversityCalculators/MothurShannonCalculator.cpp
        Random/ReservoirPairs.h)
